add phone submit and validation routes view

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.3",
+    "react-hook-form": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
     "swr": "^0.1.18"
   },
+  "proxy": "https://covid-api-dev.citizennext.ro",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
