--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "date-fns": "^2.11.1",
     "emotion-theming": "^10.0.27",
+    "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
     "react": "^16.13.1",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.3",
-    "react-hook-form": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
@@ -43,7 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "react-hook-form-devtools": "^1.1.3"
-  }
+  "devDependencies": {}
 }
