--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
+    "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
