--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.11.1",
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.4",
+    "formik-persist": "^1.1.0",
     "isomorphic-unfetch": "^3.0.0",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
