--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "date-fns": "^2.11.1",
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.4",
-    "formik-persist": "^1.1.0",
     "isomorphic-unfetch": "^3.0.0",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-datepicker": "^2.14.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "npm:@hot-loader/react-dom",
     "react-feather": "^2.0.3",
+    "react-hot-loader": "^4.12.20",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
