--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@reach/dialog": "^0.10.0",
+    "@rehooks/local-storage": "^2.3.0",
     "date-fns": "^2.11.1",
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.4",
