--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "npm:@hot-loader/react-dom",
     "react-feather": "^2.0.8",
     "react-hot-loader": "^4.12.21",
+    "react-qr-svg": "^2.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
