--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-feather": "^2.0.8",
     "react-hot-loader": "^4.12.21",
     "react-qr-svg": "^2.2.2",
-    "react-recaptcha": "^2.3.10",
+    "react-recaptcha-v3": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
