--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^10.0.27",
     "@reach/dialog": "^0.10.3",
     "@rehooks/local-storage": "^2.4.0",
+    "@sentry/browser": "^5.15.5",
     "date-fns": "^2.14.0",
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.4",
