--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-datepicker": "^2.16.0",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-feather": "^2.0.8",
+    "react-helmet": "^6.0.0",
     "react-hot-loader": "^4.12.21",
     "react-qr-svg": "^2.2.2",
     "react-recaptcha-v3": "^1.1.0",
