--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
+    "jr-qrcode": "^1.1.4",
+    "jspdf": "^1.5.3",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-datepicker": "^3.0.0",
