--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/core": "^0.8.0",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
-    "@reach/dialog": "^0.10.3",
+    "@chakra-ui/core": "^1.0.0-next.2",
+    "@chakra-ui/icons": "^1.0.0-next.2",
+    "@chakra-ui/theme-tools": "^1.0.0-next.2",
+    "@reach/dialog": "^0.10.4",
     "@rehooks/local-storage": "^2.4.0",
-    "@sentry/browser": "^5.17.0",
-    "emotion-theming": "^10.0.27",
+    "@sentry/browser": "^5.18.0",
     "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
     "jr-qrcode": "^1.1.4",
@@ -22,14 +21,12 @@
     "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.12.21",
     "react-qr-svg": "^2.2.2",
-    "react-recaptcha-v3": "^1.1.0",
+    "react-recaptcha-v3": "^2.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "react-signature-canvas": "^1.0.3",
-    "source-map-explorer": "^2.4.2",
-    "swr": "^0.2.2",
-    "unfetch": "^4.1.0"
+    "swr": "^0.2.3"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -54,8 +51,9 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.9.0",
-    "@testing-library/react": "^10.2.1",
-    "@testing-library/user-event": "^11.3.2"
+    "@testing-library/jest-dom": "^5.10.1",
+    "@testing-library/react": "^10.4.1",
+    "@testing-library/user-event": "^12.0.7",
+    "source-map-explorer": "^2.4.2"
   }
 }
