--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/core": "^1.0.0-next.4",
-    "@chakra-ui/icons": "^1.0.0-next.3",
-    "@chakra-ui/theme-tools": "^1.0.0-next.3",
-    "@reach/dialog": "^0.10.5",
+    "@chakra-ui/core": "^1.0.0-rc.3",
+    "@chakra-ui/icons": "^1.0.0-rc.3",
+    "@chakra-ui/theme": "^1.0.0-rc.3",
+    "@chakra-ui/theme-tools": "^1.0.0-rc.3",
+    "@reach/dialog": "^0.11.2",
     "@rehooks/local-storage": "^2.4.0",
-    "@sentry/browser": "^5.19.0",
+    "@sentry/browser": "^5.22.3",
     "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
     "jr-qrcode": "^1.1.4",
-    "jspdf": "^1.5.3",
-    "ramda": "^0.27.0",
+    "jspdf": "^2.1.0",
+    "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-datepicker": "^3.0.0",
     "react-dom": "npm:@hot-loader/react-dom",
@@ -23,10 +24,10 @@
     "react-qr-svg": "^2.2.2",
     "react-recaptcha-v3": "^2.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
     "react-signature-canvas": "^1.0.3",
-    "swr": "^0.2.3"
+    "swr": "^0.3.2"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -51,9 +52,9 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.0",
-    "@testing-library/react": "^10.4.4",
-    "@testing-library/user-event": "^12.0.11",
-    "source-map-explorer": "^2.4.2"
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.1",
+    "@testing-library/user-event": "^12.1.3",
+    "source-map-explorer": "^2.5.0"
   }
 }
